--- a/README
+++ b/README
@@ -9,12 +9,19 @@ Pair/Bond potential:
 
 Angle potential:
 - Harmonic angle potential
+- Harmonic cosine angle potential
+- Cosine angle potential
+- Quartic potential
+- Screened harmonic potential
+- Compass potential
 
 Bond+Angle potential:
 - Stillinger-Weber potential
 
 Dihedral potential
+- Cosine dihedral potential
 - Harmonic dihedral potential
+- Harmonic cosine dihedral potential
 
 Many body potential
 - 
